--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,17 @@
+manrope {
+  font-family: "Manrope", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+}
+
 * {
   list-style: none;
   text-decoration: none;
   margin: 0%;
-  font-family: Manrope;
   font-weight: 300;
+  font-family: Manrope;
 }
+
 :root {
   --ligth-color: #d9d9d9;
   --dark-color: #a6b5b5;
@@ -65,7 +72,7 @@ aside {
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   display: flex;
   flex-flow: column wrap;
-  max-width: 265px;
+  max-width: 500px;
   margin-top: 13px;
   padding: 13px;
   position: absolute;
@@ -88,33 +95,46 @@ aside label {
   display: flex;
   flex-direction: column;
   margin-top: 6px;
+  margin-bottom: 6px;
 }
 
 aside input {
   background: #a6b5b5;
+  margin-top: 6px;
+  margin-bottom: 6px;
+  padding: 6px;
+  border: none;
+  border-radius: 4px;
 }
 
 aside select {
   background: #a6b5b5;
   height: 27px;
+  margin-top: 6px;
+  margin-bottom: 6px;
+  padding: 6px;
+  border: none;
+}
+.select {
+  font-size: 12px;
+  border-radius: 4px;
+  padding: 6px;
 }
 
-#fondo-div {
+.checkbox {
   display: flex;
+  flex-flow: row nowrap;
+  gap: 6px;
   align-items: center;
-  gap: 10px;
 }
-
-#color {
+.div50 {
+  display: flex;
+  flex-flow: row nowrap;
+  gap: 6px;
   width: 100%;
 }
-
-#fondo {
-  width: 100%;
-}
-
-#section-text {
-  display: none;
+.range {
+  margin: 0%;
 }
 
 .main-green {
@@ -142,9 +162,10 @@ aside select {
 .meme-img {
   height: 100%;
   width: auto;
+  margin: 10px 0px;
 }
 
-.descargar-button {
+.button-descargar {
   margin-bottom: 5%;
   display: inline-flex;
   padding: 11px 27px;
@@ -156,8 +177,10 @@ aside select {
   align-content: center;
   color: #d9d9d9;
   font-size: 20px;
+  border: none;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
-.hiden {
+.hidden {
   display: none;
 }
