--- a/css/style.css
+++ b/css/style.css
@@ -41,8 +41,8 @@ h1 {
 h2 {
   width: 100%;
   text-align: center;
-  padding: 15px 10px;
-  flex-flow: wrap;
+  padding: 15px 0px;
+  overflow-wrap: break-word;
 }
 .div-button-header {
   display: flex;
@@ -217,7 +217,6 @@ aside input {
 .meme {
   display: flex;
   flex-flow: column nowrap;
-  padding: 0px 10px;
   background: var(--ligth-color);
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   width: 650px;
@@ -229,7 +228,6 @@ aside input {
 .meme-img {
   height: 100%;
   width: 100%;
-  margin: 10px 0px;
 }
 
 .button-descargar {
@@ -344,5 +342,9 @@ aside input {
   .cerrar-button {
     top: 10px;
     right: 10px;
+  }
+  .contorno-opciones {
+    display: flex;
+    flex-direction: column;
   }
 }
