--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,54 @@ h2 {
   padding: 15px 0px;
   overflow-wrap: break-word;
 }
+
+main {
+  background-color: var(--dark-color);
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: center;
+  height: calc(100vh - 128px);
+  padding-top: 40px;
+}
+aside {
+  background-color: var(--ligth-color);
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  display: flex;
+  flex-flow: column wrap;
+  max-width: 500px;
+  padding: 13px;
+  position: absolute;
+  right: 0;
+  height: 750px;
+}
+
+aside h3 {
+  text-align: center;
+  font-size: 36px;
+}
+
+aside h4 {
+  font-size: 15px;
+  margin: 14px 0px 0px 0px;
+}
+
+aside label {
+  font-size: 12px;
+  display: flex;
+  flex-direction: column;
+  margin-top: 6px;
+  margin-bottom: 6px;
+}
+
+aside input {
+  background: var(--dark-color);
+  margin-top: 6px;
+  margin-bottom: 6px;
+  padding: 6px;
+  border: none;
+  border-radius: 4px;
+  color: var(--color);
+}
 .div-button-header {
   display: flex;
   flex-flow: row nowrap;
@@ -74,54 +122,6 @@ h2 {
 
 .button-header h4 {
   margin: 0;
-}
-
-main {
-  background-color: var(--dark-color);
-  display: flex;
-  flex-flow: row nowrap;
-  justify-content: center;
-  height: calc(100vh - 128px);
-}
-aside {
-  background-color: var(--ligth-color);
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-  display: flex;
-  flex-flow: column wrap;
-  max-width: 500px;
-  margin-top: 13px;
-  padding: 13px;
-  position: absolute;
-  right: 0;
-  height: 80dvh;
-}
-
-aside h3 {
-  text-align: center;
-  font-size: 36px;
-}
-
-aside h4 {
-  font-size: 15px;
-  margin: 14px 0px 0px 0px;
-}
-
-aside label {
-  font-size: 12px;
-  display: flex;
-  flex-direction: column;
-  margin-top: 6px;
-  margin-bottom: 6px;
-}
-
-aside input {
-  background: var(--dark-color);
-  margin-top: 6px;
-  margin-bottom: 6px;
-  padding: 6px;
-  border: none;
-  border-radius: 4px;
-  color: var(--color);
 }
 
 .fondo-div {
@@ -189,6 +189,7 @@ aside input {
   flex-flow: row nowrap;
   justify-content: space-between;
   gap: 4px;
+  color: var(--color);
 }
 .boton-contorno {
   background: var(--dark-color);
@@ -261,11 +262,6 @@ aside input {
 }
 
 @media (max-width: 576px) {
-  aside {
-    height: 100%;
-    width: 100%;
-    display: none;
-  }
   header {
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     padding: 12px 0px 12px 0px;
@@ -274,23 +270,13 @@ aside input {
   h1 {
     font-size: 16px;
   }
-  .div-button-header {
-    gap: 24px;
-    height: 18px;
-    margin-top: 7px;
-  }
-
-  .button-header {
-    margin-right: 10px;
-    font-size: 10px;
-  }
-  .button-header img {
-    margin-right: 4px;
-    width: 18px;
-    height: 18px;
-  }
   main {
     height: calc(100vh - 80px);
+  }
+  aside {
+    height: 100%;
+    width: 100%;
+    display: none;
   }
   aside h3 {
     font-size: 15px;
@@ -310,19 +296,37 @@ aside input {
     margin-bottom: 3px;
     padding: 3px;
     border-radius: 4px;
+    max-width: 250px;
+  }
+
+  .div-button-header {
+    gap: 24px;
+    height: 18px;
+    margin-top: 7px;
+  }
+
+  .button-header {
+    margin-right: 10px;
+    font-size: 10px;
+  }
+  .button-header img {
+    margin-right: 4px;
+    width: 18px;
+    height: 18px;
   }
 
   .select {
     font-size: 8px;
     height: 15px;
+    max-width: 250px;
   }
 
   .parrafo {
     font-size: 10px;
   }
   .texto-button {
-    width: 15px;
-    height: 15px;
+    width: 24px;
+    height: 24px;
   }
 
   .meme {
@@ -339,12 +343,16 @@ aside input {
   .button-descargar {
     font-size: 12px;
   }
-  .cerrar-button {
-    top: 10px;
-    right: 10px;
-  }
+
   .contorno-opciones {
     display: flex;
     flex-direction: column;
+    max-width: 250px;
+  }
+
+  .cerrar-button {
+    display: flex;
+    align-self: center;
+    justify-self: center;
   }
 }
